# pdm-devhelp

./: .gitignore  .pre-commit-config.yaml  cliff.toml  cog.toml  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
src/plugins/pdm-bump-scm/: README.md  bump_command.py  pyproject.toml
src/plugins/pdm-namespace-dist/: README.md  namespace_dist.py  pyproject.toml
