[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm-devhelp"
requires-python = ">=3.9"
dependencies = ["pdm>=2.22"]
dynamic = ["version"]
classifiers = ["Private :: Do Not Upload"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["src/plugins/pdm-namespace-dist"]

[tool.uv.sources]
pdm-namespace-dist = { workspace = true }

[tool.pdm]
distribution = false

[tool.pdm.version]
source = "scm"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
fallback_version = "0.0.0"

[tool.pdm.scripts]
workspace-lock = "uv lock --no-python-downloads"
workspace-sync = "uv sync --locked --all-packages --no-python-downloads {args}"
workspace-build = "uv build --all-packages --no-python-downloads"
workspace-publish = "uv publish -v --no-python-downloads ./dist/*"
workspace-install = { composite = ["workspace-lock", "workspace-sync"] }
test = "pytest -s -v -k {args}"
test-all = "coverage run -m pytest"
test-types = "pdm run basedpyright --stats ./src/**"
test-cover = "coverage report"
test-tox = "tox --develop -r -e py"
pc-init = { composite = ["pre-commit install --install-hooks", "pc-update"] }
pc-update = "pre-commit autoupdate"
pc-check = { env = { "SKIP" = "basedpyright" }, cmd = "pre-commit run --all-files" }
pc-clean = "pre-commit clean && pre-commit gc"
list-group = "pdm list --fields name,groups,version,licenses,homepage --sort groups,name,licenses --exclude :sub"
checkup = { composite = [
  "pdm show",
  "list-group",
  "tokei",
  "pc-check",
  "test-types",
  "dead",
  "test-cover",
], keep_going = true }

[dependency-groups]
dev = ["pdm-backend>=2.4.3"]
test = ["pytest>=8.3", "coverage[toml]>=7.6", "tox>=4.24", "tox-pdm>=0.7.2"]
static = ["ruff>=0.9", "basedpyright>=1.28", "pre-commit>=4.1", "dead>=2.1"]
